--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=firstjobpp
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:test
+
+# To see which queries are being executed by H2 in logs
+spring.jpa.show-sql=true 
+
+# To initialize whole database again
+# spring.jpa.hibernate.ddl-auto=create-drop
