--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.show-sql=true
 
 # To initialize whole database again
 # spring.jpa.hibernate.ddl-auto=create-drop
+
+#Actuator
+management.endpoints.web.exposure.include=*
+management.endpoints.health.show-details=always
