Bug - it should be 'endpoint' instead of 'endpoints'

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.jpa.show-sql=true
 
 #Actuator
 management.endpoints.web.exposure.include=*
-management.endpoints.health.show-details=always
+management.endpoint.health.show-details=always
