1. Add actuator properties to monitor info endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.jpa.show-sql=true
 #Actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+
+management.info.env.enabled=true
+info.app.name=JobApplication
+info.app.description=Job app built by Kunj
+info.app.version=1.0.0
