1. Add actuator properties to gracefuly stop the server. 2. Commented shutdown property as of now, because anyone can stop my server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,8 @@ management.info.env.enabled=true
 info.app.name=JobApplication
 info.app.description=Job app built by Kunj
 info.app.version=1.0.0
+
+# to shutdown complete application by just hitting POST request at the below URL
+# http://localhost:8080/actuator/shutdown
+#management.endpoint.shutdown.enabled=true
+#server.shutdown=graceful
