Using spring-boot-maven-plugin to containerize the Job Application

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,8 @@
 
 	<build>
 		<plugins>
+			<!-- By using this plugin, we don't have to create different docker file
+					to containerize the app. -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
