Add properties for using PostgreSQL instead of H2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.application.name=firstjobpp
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:test
+# h2 database
+#spring.application.name=firstjobpp
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:test
 
 # To see which queries are being executed by H2 in logs
-spring.jpa.show-sql=true 
+#spring.jpa.show-sql=true
 
 # To initialize whole database again
 # spring.jpa.hibernate.ddl-auto=create-drop
@@ -21,3 +22,12 @@ info.app.version=1.0.0
 # http://localhost:8080/actuator/shutdown
 #management.endpoint.shutdown.enabled=true
 #server.shutdown=graceful
+
+#PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/jobapp
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
